# -LFP_1S2026_-202300502

./: README.md
build-mingw/: CMakeCache.txt  Makefile  arbol.dot  cmake_install.cmake  reporte_carga.html  reporte_errores.html  reporte_kanban.html
build-mingw/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-mingw/TaskScript_autogen/: deps  moc_predefs.h
build-mingw/TaskScript_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
documentos/manuales/: Manual_Tecnico.docx  Manual_de_Usuario.docx
src/: CMakeLists.txt  Nuevo Documento de texto.txt  entrada_con_errores.task  entrada_valida.task  errormanager.cpp  errormanager.h  lexicalanalyzer.cpp  lexicalanalyzer.h  main.cpp  mainwindow.cpp  mainwindow.h  reportgenerator.cpp  reportgenerator.h  syntaxanalyzer.cpp  syntaxanalyzer.h  token.h
